--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,8 +1,9 @@
 ---
 import { Picture } from "astro:assets";
-import heroImage from "assets/hero.png";
+import heroImage from "assets/moddable.png";
 import Link from "@components/ui/link.astro";
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
+
 ---
 
 <main
@@ -12,20 +13,19 @@ import { Icon } from "astro-icon";
       src={heroImage}
       alt="Astronaut in the air"
       widths={[200, 400, 600]}
-      sizes="(max-width: 800px) 100vw, 620px"
+      sizes="(max-width: 800px) 100vw, 400px"
       loading="eager"
       format="avif"
+      style={{maxWidth: "400px"}}
     />
   </div>
   <div>
     <h1
       class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
-      Marketing website done with Astro
+      Mod support for business software
     </h1>
-    <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      Astroship is a starter template for startups, marketing websites & landing
-      pages.<wbr /> Built with Astro.build and TailwindCSS. You can quickly
-      create any website with this starter.
+    <p class="text-2xl mt-4 text-slate-600 max-w-xl">
+      Let users add their own custom features without leaving your product.
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
@@ -34,9 +34,9 @@ import { Icon } from "astro-icon";
         target="_blank"
         class="flex gap-1 items-center justify-center"
         rel="noopener">
-        <Icon class="text-white w-5 h-5" name="bx:bxs-cloud-download" />
+        <Icon class="text-white w-5 h-5 mr-2" name="fluent:calendar-add-28-regular" />
 
-         Download for Free
+         Book a demo
       </Link>
       <Link
         size="lg"
@@ -45,8 +45,8 @@ import { Icon } from "astro-icon";
         href="https://github.com/surjithctly/astroship"
         class="flex gap-1 items-center justify-center"
         target="_blank">
-        <Icon class="text-black w-4 h-4" name="bx:bxl-github" />
-         GitHub Repo
+        <Icon class="text-black w-4 h-4 mr-2" name="fluent:video-clip-28-regular" />
+         Watch intro
       </Link>
     </div>
   </div>
