--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -4,12 +4,11 @@ import Link from "./ui/link.astro";
 
 <div
   class="bg-black p-8 md:px-20 md:py-20 mt-20 mx-auto max-w-5xl rounded-lg flex flex-col items-center text-center">
-  <h2 class="text-white text-4xl md:text-6xl tracking-tight">
-    Build faster websites.
+  <h2 class="text-white text-3xl md:text-4xl tracking-tight">
+    Add mod support to your product.
   </h2>
   <p class="text-slate-400 mt-4 text-lg md:text-xl">
-    Pull content from anywhere and serve it fast with Astro's next-gen island
-    architecture.
+    Let users add custom features without leaving your platform.
   </p>
   <div class="flex mt-5">
     <Link href="#" style="inverted">Get Started</Link>
