--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Container from "@components/container.astro";
 import Cta from "@components/cta.astro";
 import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
-import Logos from "@components/logos.astro";
+import SaveMillions from "@components/saveMillions.astro";
 import Layout from "@layouts/Layout.astro";
 ---
 
@@ -11,7 +11,7 @@ import Layout from "@layouts/Layout.astro";
   <Container>
     <Hero />
     <Features />
-    <Logos />
+    <SaveMillions />
     <Cta />
   </Container>
 </Layout>
