--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -11,10 +11,8 @@ const pricing = [
     popular: false,
     features: [
       "Lifetime free",
-      "Up to 3 users",
-      "Unlimited Pages",
-      "Astro Sub domain",
-      "Basic Integrations",
+      "Up to 3 Users",
+      "Up to 10 Mods",
       "Community Support",
     ],
     button: {
@@ -25,7 +23,7 @@ const pricing = [
   {
     name: "Startup",
     price: {
-      monthly: "$19",
+      monthly: "$200",
       annual: "$16",
       discount: "10%",
       original: "$24",
@@ -33,11 +31,12 @@ const pricing = [
     popular: true,
     features: [
       "All Free Features",
-      "Up to 20 users",
-      "20 Custom domains",
-      "Unlimited Collaborators",
-      "Advanced Integrations",
+      "Up to 200 Users",
+      "Up to 800 Mods",
+      "Up to 100,000 Views/Month",
       "Priority Support",
+      "99.99% Uptime SLA",
+
     ],
     button: {
       text: "Get Started",
@@ -49,12 +48,14 @@ const pricing = [
     price: "Custom",
     popular: false,
     features: [
-      "All Pro Features",
-      "Unlimited Custom domains",
-      "99.99% Uptime SLA",
-      "SAML & SSO Integration",
+      "All Startup Features",
+      "Unlimited Users",
+      "Ulimited Mods",
+      "Ulimited Usage",
+      "Enterprise Grade Support",
+      "Access to our Engineers",
+      "Option to Self Host",
       "Dedicated Account Manager",
-      "24/7 Phone Support",
     ],
     button: {
       text: "Contact us",
