Fix duplicated reference to Typescript in features

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -30,7 +30,7 @@ const features = [
   {
     title: "Batteries Included",
     description:
-      "React, TypeScript, autocomplete/lint, TypeScript and Tailwind by default.",
+      "React, TypeScript, autocomplete/lint, NPM packages, and Tailwind by default.",
     icon: "mdi:battery-medium",
   },
   {
