Add links to the hero CTAs

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -30,7 +30,7 @@ import { Icon } from "astro-icon/components";
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
       <Link
         href="#"
-        href="https://web3templates.com/templates/astroship-starter-website-template-for-astro"
+        href="https://meetings-eu1.hubspot.com/sam14/moddable"
         target="_blank"
         class="flex gap-1 items-center justify-center"
         rel="noopener">
@@ -42,7 +42,7 @@ import { Icon } from "astro-icon/components";
         size="lg"
         style="outline"
         rel="noopener"
-        href="https://github.com/surjithctly/astroship"
+        href="https://storage.cloud.google.com/moddable-public/Moddable%20Demo.mp4"
         class="flex gap-1 items-center justify-center"
         target="_blank">
         <Icon class="text-black w-4 h-4 mr-2" name="fluent:video-clip-28-regular" />
