--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -11,7 +11,7 @@ const pricing = [
     popular: false,
     features: [
       "Lifetime free",
-      "Up to 3 Users",
+      "Up to 3 User Accounts",
       "Up to 10 Mods",
       "Community Support",
     ],
@@ -23,7 +23,7 @@ const pricing = [
   {
     name: "Startup",
     price: {
-      monthly: "$200",
+      monthly: "$2,000",
       annual: "$16",
       discount: "10%",
       original: "$24",
@@ -31,9 +31,9 @@ const pricing = [
     popular: true,
     features: [
       "All Free Features",
-      "Up to 200 Users",
-      "Up to 800 Mods",
-      "Up to 100,000 Views/Month",
+      "Up to 2,000 User Accounts",
+      "Unlimited Mods",
+      "Up to 1 million Views/Month",
       "Priority Support",
       "99.99% Uptime SLA",
 
