--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -11,8 +11,8 @@ const pricing = [
     popular: false,
     features: [
       "Lifetime free",
-      "Up to 3 User Accounts",
-      "Up to 10 Mods",
+      "Up to 100 Mods",
+      "Up to 100 End-Users",
       "Community Support",
     ],
     button: {
@@ -31,8 +31,8 @@ const pricing = [
     popular: true,
     features: [
       "All Free Features",
-      "Up to 2,000 User Accounts",
       "Unlimited Mods",
+      "Up to 10,000 End-Users",
       "Up to 1 million Views/Month",
       "Priority Support",
       "99.99% Uptime SLA",
