Fix broken links. Make all CTAs work

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -101,7 +101,7 @@ const menuitems:{title:string; path:string; children?:{title:string; path:string
     <div>
       <div class="hidden lg:flex items-center gap-4">
         <a href="https://app.moddable.app">Log in</a>
-        <Link href="https://meetings-eu1.hubspot.com/sam14/moddable" size="md">Get Started</Link>
+        <Link href="https://meetings-eu1.hubspot.com/sam14/moddable" size="md">Book A Demo</Link>
       </div>
     </div>
   </header>
