--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -6,7 +6,7 @@ import PricingCard from "@components/pricing.astro";
 
 const pricing = [
   {
-    name: "Personal",
+    name: "Free Pilot",
     price: "Free",
     popular: false,
     features: [
@@ -16,8 +16,8 @@ const pricing = [
       "Community Support",
     ],
     button: {
-      text: "Get Started",
-      link: "/",
+      text: "Talk to Us",
+      link: "https://meetings-eu1.hubspot.com/sam14/moddable",
     },
   },
   {
@@ -32,7 +32,7 @@ const pricing = [
     features: [
       "All Free Features",
       "Unlimited Mods",
-      "Up to 10,000 End-Users",
+      "Up to 10,000 Active End-Users",
       "Up to 1 million Views/Month",
       "Priority Support",
       "99.99% Uptime SLA",
@@ -40,7 +40,7 @@ const pricing = [
     ],
     button: {
       text: "Get Started",
-      link: "#",
+      link: "https://meetings-eu1.hubspot.com/sam14/moddable",
     },
   },
   {
@@ -59,7 +59,7 @@ const pricing = [
     ],
     button: {
       text: "Contact us",
-      link: "/contact",
+      link: "Get Started",
     },
   },
 ];
