--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -11,6 +11,6 @@ import Link from "./ui/link.astro";
     Let users add custom features without leaving your platform.
   </p>
   <div class="flex mt-5">
-    <Link href="#" style="inverted">Get Started</Link>
+    <Link href="https://meetings-eu1.hubspot.com/sam14/moddable" style="inverted">Get Started</Link>
   </div>
 </div>
