--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -14,32 +14,42 @@ import { Icon } from "astro-icon/components";
       <Fragment slot="desc">We are a here to help.</Fragment>
     </Sectionhead>
 
-    <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
+    <div class="grid md:grid-cols-1 gap-10 mx-auto max-w-4xl mt-16">
       <div>
-        <h2 class="font-medium text-2xl text-gray-800">Contact Astroship</h2>
+        <h2 class="font-medium text-2xl text-gray-800">Contact Moddable</h2>
         <p class="text-lg leading-relaxed text-slate-500 mt-3">
-          Have something to say? We are here to help. Fill up the form or send
-          email or call phone.
+          We are here to help you turn products into incredible platforms.
         </p>
         <div class="mt-5">
-          <div class="flex items-center mt-2 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:map-marker" />
-            <span>1734 Sanfransico, CA 93063</span>
-          </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:envelope" /><a
-              href="mailto:hello@astroshipstarter.com"
-              >hello@astroshipstarter.com</a
-            >
-          </div><div class="flex items-center mt-2 space-x-2 text-gray-600">
-            <Icon class="text-gray-400 w-4 h-4" name="uil:phone" /><a
-              href="tel:+1 (987) 4587 899">+1 (987) 4587 899</a
-            >
+          
+          
+          <div class="flex items-center mt-2 text-gray-600">
+            <Icon class="text-gray-400 w-4 h-4 mr-4" name="uil:envelope" />
+              hello<Icon class="text-gray-400 w-4 h-4" name="uil:at" />moddable.app
           </div>
+
+          <div class="flex items-center mt-2 space-x-2 text-gray-600">
+            <a
+            href="https://meetings-eu1.hubspot.com/sam14/moddable"
+            target="_blank"
+            class="flex items-center underline underline-offset-4 text-gray-600 hover:text-gray-800"
+            rel="noopener">
+            
+            <Icon class="text-gray-400 w-4 h-4 mr-4" name="fluent:calendar-add-28-regular" />
+         Book a demo
+          </a>
+          </div>
+
+          <div class="flex items-center mt-2 space-x-2 text-gray-600">
+            <Icon class="text-gray-400 w-4 h-4 mr-2" name="uil:map-marker" />
+            <span>39 Queen Victoria Road, Sheffield, United Kingdom</span>
+          </div>
+
         </div>
       </div>
-      <div>
+      <!-- <div>
         <Contactform />
-      </div>
+      </div> -->
     </div>
   </Container>
 </Layout>
