Added demo video

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -65,7 +65,7 @@ const features = [
     From Product to Platform.
   </h2>
   <p class="text-lg mt-4 text-slate-600">
-    Mod-support is easily the most powerful feature in B2B software.
+    Mod-support is the most powerful feature in B2B software.
   </p>
 </div>
 
