--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -52,7 +52,9 @@ const { Content } = await entry.render();
       {contentBeforeFirstHeading}
     </div> -->
 
-    {entry.data.image && ( <div class="mx-auto mt-12 max-w-4xl"> <img src={entry.data.image.src} alt={entry.data.image.alt} class="w-full rounded-xl shadow-lg" /> </div> )} <div class="mx-auto prose prose-lg mt-6 max-w-3xl"> <Content /> </div> 
+    {entry.data.image && ( <div class="mx-auto mt-12 max-w-4xl"> <img src={entry.data.image.src} alt={entry.data.image.alt} class="w-full rounded-xl shadow-lg" /> </div> )}
+    
+    <div class="mx-auto prose prose-lg mt-6 max-w-3xl" id="blogMainContent"> <Content /> </div> 
 
     <div class="text-center mt-16">
       <a
