--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Container from "@components/container.astro";
 import Cta from "@components/cta.astro";
+import DemoVideo from "@components/demoVideo.astro";
 import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
 import SaveMillions from "@components/saveMillions.astro";
@@ -10,6 +11,7 @@ import Layout from "@layouts/Layout.astro";
 <Layout title="">
   <Container>
     <Hero />
+    <DemoVideo />
     <Features />
     <SaveMillions />
     <Cta />
