Update video URL to v2

--- a/src/components/demoVideo.astro
+++ b/src/components/demoVideo.astro
@@ -6,7 +6,7 @@
       <video
         id="demoVideo"
         class="absolute top-0 left-0 w-full h-full cursor-pointer object-cover"
-        src="https://storage.googleapis.com/moddable-public/Moddable%20in%20Honeycomb%201min.mp4"
+        src="https://storage.googleapis.com/moddable-public/Moddable%20in%20Honeycomb%201min%20v2.mp4"
         poster="https://storage.googleapis.com/moddable-public/moddable-in-60s-poster.png"
         controls
       ></video>
